# mold-management

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
data/: mold-data.xlsx
scripts/: build-sidecar-windows.sh  build-sidecar.ps1  build-sidecar.sh
sidecar/: package-lock.json  package.json  server-bundle.cjs  server.js
src/: App.tsx  App.vue  index.css  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: excel.rs  lib.rs  main.rs
src/api/: index.ts
src/components/: GlobalSearch.vue  StockTable.vue  confirm-dialog.tsx  data-table.tsx  global-search.tsx
src/components/layout/: app-layout.tsx  app-sidebar.tsx
src/components/ui/: input-number.tsx  select.tsx
src/composables/: useAllowDelete.ts  useHighlight.ts
src/hooks/: use-allow-delete.ts  use-fullscreen.ts
src/pages/: module-page.tsx  not-found.tsx  screw-spec.tsx  settings.tsx
src/pages/module-configs/: belt.tsx  die.tsx  index.ts  main-mold.tsx  punch.tsx  scissor.tsx  types.ts  upper-punch.tsx
src/router/: index.ts
src/stores/: allow-delete.ts
src/utils/: punchName.ts
src/views/: Belt.vue  Die.vue  Inventory.vue  MainMold.vue  Punch.vue  Scissor.vue  ScrewSpec.vue  Settings.vue  UpperPunch.vue
