[package]
name = "mold-management"
version = "0.1.0"
description = "螺丝生产工厂模具出入库管理系统"
authors = ["you"]
edition = "2021"

[lib]
name = "mold_management_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
